controller içleri dolduruldu, ve customer ve product view sayfaları oluşturuldu.

--- a/MvcStock/Views/Product/Index.cshtml
+++ b/MvcStock/Views/Product/Index.cshtml
@@ -32,5 +32,5 @@
             }
     </tbody>
 </table>
-<a href="/PRODUCT/YENIPRODUCT/" class="btn btn-primary">ADD NEW PRODUCT</a>
+<a href="/PRODUCT/UrunEkle/" class="btn btn-primary">ADD NEW PRODUCT</a>
 
