listeye yeni ürün ekleme işlemi yapıldı.

--- a/MvcStock/Views/Product/UrunEkle.cshtml
+++ b/MvcStock/Views/Product/UrunEkle.cshtml
@@ -19,7 +19,7 @@
 
     <div>
         <label>SELECT CATEGORY</label>
-        @Html.DropDownListFor(m => m.KATEGORIAD, (List<SelectListItem>)ViewBag.dgr, new {@class="form-control"})
+        @Html.DropDownListFor(m => m.KATEGORIID, (List<SelectListItem>)ViewBag.dgr, new {@class="form-control"})
     </div>
 
     <div>
