--- a/MvcStock/Views/Product/Index.cshtml
+++ b/MvcStock/Views/Product/Index.cshtml
@@ -23,7 +23,7 @@
                     <th>@urn.URUNID</th>
                     <td>@urn.URUNAD</td>
                     <td>@urn.MARKA</td>
-                    <td>@urn.CATEGORIES.KATEGORIAD</td>
+                    <td>@urn.URUNKATEGORI</td>
                     <td>@urn.FIYAT</td>
                     <td>@urn.STOK</td>
                     <td><a href="/PRODUCT/DELETE/@urn.URUNID" class="btn btn-danger">DELETE</a></td>
