--- a/MvcStock/Views/Category/Index.cshtml
+++ b/MvcStock/Views/Category/Index.cshtml
@@ -18,7 +18,7 @@
                     <th>@ktgr.KATEGORIID</th>
                     <td>@ktgr.KATEGORIAD</td>
                     <td><a href="/CATEGORY/DELETE/@ktgr.KATEGORIID" class="btn btn-danger">DELETE</a></td>
-                    <td><a href="/CATEGORY/UPDATE/@ktgr.KATEGORIID" class="btn btn-success">UPDATE</a></td>
+                    <td><a href="/CATEGORY/KategoriGetir/@ktgr.KATEGORIID" class="btn btn-success">UPDATE</a></td>
                 </tr>
          }
     </tbody>
