müşteri bilgileri güncelleme sayfasına taşındı.

--- a/MvcStock/Views/Customer/Index.cshtml
+++ b/MvcStock/Views/Customer/Index.cshtml
@@ -21,7 +21,7 @@
                     <td>@cus.MUSTERIAD</td>
                     <td>@cus.MUSTERISOYAD</td>
                     <td><a href="/CUSTOMER/DELETE/@cus.MUSTERIID" class="btn btn-danger">DELETE</a></td>
-                    <td><a href="/CUSTOMER/UPDATE/@cus.MUSTERIID" class="btn btn-success">UPDATE</a></td>
+                    <td><a href="/CUSTOMER/MusteriGetir/@cus.MUSTERIID" class="btn btn-success">UPDATE</a></td>
                 </tr>
             }
     </tbody>
