--- a/MvcStock/Views/Category/YeniKategori.cshtml
+++ b/MvcStock/Views/Category/YeniKategori.cshtml
@@ -1,13 +1,18 @@
-﻿
+﻿@model MvcStock.Models.Entity.CATEGORIES
 @{
     ViewBag.Title = "YeniKategori";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
 <form class="form-group" method="post">
-    <div>
+    @*<div>
         <label>Kategori Adı</label>
         <input type="text" class="form-control" name="KATEGORIAD" />
+    </div>*@
+    <div>
+        <label>Kategori Adı</label>
+        @Html.TextBoxFor(m=>m.KATEGORIAD, new {@class="form-control"})
+        @Html.ValidationMessageFor(m=>m.KATEGORIAD,"",new {@style="color:blue"})
     </div>
 
     <div style="margin-top:15px">
