controller ve view'larda düzenlemeler yapıldı.

--- a/MvcStock/Views/Product/Index.cshtml
+++ b/MvcStock/Views/Product/Index.cshtml
@@ -27,7 +27,7 @@
                     <td>@urn.FIYAT</td>
                     <td>@urn.STOK</td>
                     <td><a href="/PRODUCT/DELETE/@urn.URUNID" class="btn btn-danger">DELETE</a></td>
-                    <td><a href="/PRODUCT/UPDATE/@urn.URUNID" class="btn btn-success">UPDATE</a></td>
+                    <td><a href="/PRODUCT/UrunGetir/@urn.URUNID" class="btn btn-success">UPDATE</a></td>
                 </tr>
             }
     </tbody>
