--- a/MvcStock/Views/Customer/YeniMusteri.cshtml
+++ b/MvcStock/Views/Customer/YeniMusteri.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model MvcStock.Models.Entity.CUSTOMERS
 @{
     ViewBag.Title = "YeniMusteri";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
@@ -7,7 +7,9 @@
 <form method="post" class="form-group">
     <div>
         <label>Customer Name</label>
-        <input type="text" class="form-control" name="MUSTERIAD" />
+        @Html.TextBoxFor(m => m.MUSTERIAD, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.MUSTERIAD, "", new { @style = "color:green" })
+        @*<input type="text" class="form-control" name="MUSTERIAD" />*@
     </div>
 
     <div>
