--- a/MvcStock/Views/Product/UrunEkle.cshtml
+++ b/MvcStock/Views/Product/UrunEkle.cshtml
@@ -9,12 +9,12 @@
 <form method="post" class="form-group">
     <div>
         <label>PRODUCT NAME</label>
-        <input type="text" class="form-control" name="URUNAD" />
+        <input type="text" class="form-control" name="URUNAD" required="" maxlength="30"/>
     </div>
 
     <div>
         <label>BRAND</label>
-        <input type="text" class="form-control" name="MARKA" />
+        <input type="text" class="form-control" name="MARKA" placeholder="Write brand here..." required=""/>
     </div>
 
     <div>
