--- a/MvcStock/Views/Customer/YeniMusteri.cshtml
+++ b/MvcStock/Views/Customer/YeniMusteri.cshtml
@@ -18,7 +18,12 @@
     </div>
 
     <div style="margin-top:15px">
-        <button class="btn btn-info">ADD CUSTOMER</button>
+        <button class="btn btn-info" id="btn1">ADD CUSTOMER</button>
     </div>
+    <script>
+        $('#btn1').click(function () {
+            alert("You added a customer...!");
+        });
+    </script>
 </form>
 
